--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
 ]
+dynamic = ["authors"]
 
 [project.urls]
 Repository = "https://github.com/tbgers/tbgclient"
